@@ -16,7 +16,7 @@ jobs:
       - name: build wheels
         uses: pypa/cibuildwheel@v2.1.1
         env:
-          CIBW_ARCHS_MACOS: "x86_64 universal2"
+          CIBW_ARCHS_MACOS: "x86_64 arm64"
           CIBW_PRERELEASE_PYTHONS: False
           CIBW_TEST_COMMAND: python -c "from refnx.reflect import available_backends; b = available_backends(); assert 'c' in b"
 
