@@ -1,0 +1,21 @@
+numpy
+cython
+scipy
+orsopy
+h5py
+pandas
+xlrd
+pytest
+ipywidgets
+IPython
+matplotlib
+traitlets
+pyqt5
+uncertainties
+attrs
+corner
+tqdm
+periodictable
+pyopencl
+pymc
+pytest-qt
